--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:front": "webpack",
     "prebuild": "del dist",
     "build": "npm run build:back && npm run build:front",
+    "prepack": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +32,7 @@
     "@types/content-type": "^1.1.5",
     "@types/jquery-mask-plugin": "^1.14.4",
     "@types/node-red": "^1.2.1",
+    "@types/ungap__structured-clone": "^0.3.0",
     "css-loader": "^6.7.1",
     "del-cli": "^5.0.0",
     "html-inline-script-webpack-plugin": "^3.1.0",
@@ -45,9 +47,10 @@
   "dependencies": {
     "@smartdcc/dccboxed-keystore": "file:../../../dccboxed-keystore/smartdcc-dccboxed-keystore-0.0.2.tgz",
     "@smartdcc/duis-parser": "file:../../../duis-parser/smartdcc-duis-parser-0.0.3.tgz",
-    "@smartdcc/duis-sign-wrap": "file:../../../duis-sign-wrap/smartdcc-duis-sign-wrap-0.0.3.tgz",
+    "@smartdcc/duis-sign-wrap": "file:../../../duis-sign-wrap/smartdcc-duis-sign-wrap-0.0.4.tgz",
     "@smartdcc/duis-templates": "file:../duis-templates/smartdcc-duis-templates-0.0.1.tgz",
     "@smartdcc/gbcs-parser": "file:../../../gbcs-parser/smartdcc-gbcs-parser-0.0.3.tgz",
+    "@ungap/structured-clone": "^1.0.1",
     "content-type": "^1.0.4",
     "got": "^11.8.5"
   },
