--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -79,10 +79,30 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16
-    - name: Install dependencies
+    - name: Install development dependencies
       run: npm ci
     - name: Build
       run: npm run build
+    - name: Install production dependencies
+      run: npm ci --omit=dev
+    - name: Import duis-template.js
+      run: node -e 'require("./dist/duis-template")'
+    - name: Import duis-construct.js
+      run: node -e 'require("./dist/duis-construct")'
+    - name: Import duis-sign.js
+      run: node -e 'require("./dist/duis-sign")'
+    - name: Import duis-parser.js
+      run: node -e 'require("./dist/duis-parser")'
+    - name: Import dccboxed-config.js
+      run: node -e 'require("./dist/dccboxed-config")'
+    - name: Import dccboxed-send.js
+      run: node -e 'require("./dist/dccboxed-send")'
+    - name: Import dccboxed-receive.js
+      run: node -e 'require("./dist/dccboxed-receive")'
+    - name: Import gbcs-parser.js
+      run: node -e 'require("./dist/gbcs-parser")'
+    - name: Import gbcs-signer.js
+      run: node -e 'require("./dist/gbcs-signer")'
 
   test:
     if: false # disable as currently no test cases
