--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@smartdcc/duis-templates": "^0.0.3",
     "@smartdcc/gbcs-parser": "^0.1.0",
     "@ungap/structured-clone": "^1.0.1",
+    "body-parser": "^1.20.0",
     "content-type": "^1.0.4",
     "got": "^11.8.5"
   },
