--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:back": "tsc",
     "build:front": "webpack",
-    "prebuild": "del dist",
+    "prebuild": "del-cli dist",
     "build": "npm run build:back && npm run build:front",
     "prepack": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -54,7 +54,7 @@
     "@smartdcc/dccboxed-keystore": "^0.1.3",
     "@smartdcc/duis-parser": "^0.4.0",
     "@smartdcc/duis-sign-wrap": "^0.1.1",
-    "@smartdcc/duis-templates": "^0.2.0",
+    "@smartdcc/duis-templates": "^0.2.1",
     "@smartdcc/gbcs-parser": "^0.2.2",
     "@ungap/structured-clone": "^1.0.1",
     "body-parser": "^1.20.0",
