--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@smartdcc/dccboxed-keystore": "^0.1.3",
     "@smartdcc/duis-parser": "^0.4.0",
     "@smartdcc/duis-sign-wrap": "^0.1.1",
-    "@smartdcc/duis-templates": "^0.3.0",
-    "@smartdcc/gbcs-parser": "^0.2.2",
+    "@smartdcc/duis-templates": "^0.4.0",
+    "@smartdcc/gbcs-parser": "^0.3.0",
     "@ungap/structured-clone": "^1.0.1",
     "body-parser": "^1.20.0",
     "content-type": "^1.0.4",
@@ -67,6 +67,7 @@
       "duis-construct": "dist/duis-construct.js",
       "duis-sign": "dist/duis-sign.js",
       "duis-parser": "dist/duis-parser.js",
+      "duis-tariff": "dist/duis-tariff.js",
       "dccboxed-config": "dist/dccboxed-config.js",
       "dccboxed-send": "dist/dccboxed-send.js",
       "dccboxed-receive": "dist/dccboxed-receive.js",
