--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tsconfig/node16": "^16.1.0",
     "@types/content-type": "^1.1.5",
     "@types/jquery-mask-plugin": "^1.14.4",
+    "@types/mustache": "^4.2.5",
     "@types/node-red": "^1.2.1",
     "@types/ungap__structured-clone": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
@@ -59,7 +60,8 @@
     "@ungap/structured-clone": "^1.0.1",
     "body-parser": "^1.20.0",
     "content-type": "^1.0.4",
-    "got": "^11.8.5"
+    "got": "^11.8.5",
+    "mustache": "^4.2.0"
   },
   "node-red": {
     "nodes": {
