--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "@types/mustache": "^4.2.5",
     "@types/node-red": "^1.2.1",
     "@types/ungap__structured-clone": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
     "css-loader": "^7.1.2",
     "del-cli": "^5.0.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "html-inline-script-webpack-plugin": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jquery-mask-plugin": "^1.14.16",
@@ -49,6 +49,7 @@
     "style-loader": "^4.0.0",
     "ts-loader": "^9.3.1",
     "typescript": "^5.0.2",
+    "typescript-eslint": "^8.2.0",
     "webpack-cli": "^5.0.0"
   },
   "dependencies": {
