maint: enable auto-merge for eslint-plugin-prettier

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -30,6 +30,7 @@ jobs:
               "typescript-eslint",
               "eslint",
               "eslint-config-prettier",
+              "eslint-plugin-prettier",
               "prettier",
               "del-cli"
               ]'),
